// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas GifGrid Debe mostrar img con UseFetch 1`] = `
<Fragment>
  <h3>
     
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier Cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquier Cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas GifGrid Renderizar GifGrid 1`] = `
<Fragment>
  <h3>
     
     
  </h3>
  <p>
     Loading 
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
